test/integration/bad/truncation-bad-type3.stan
model { 1 ~ bernoulli(0.2) T[, 1.0]; }